# console-pong

./: README.md  pyproject.toml
src/console_pong/: __init__.py  __main__.py  game.py
