[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "console-pong"
version = "1.0.0"
description = "A fully featured Pong game right in your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["pong", "game", "terminal", "console", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Arcade",
]

[project.scripts]
pong = "console_pong:main"

[project.urls]
Homepage = "https://github.com/CheezeDeveloper/console-pong"
